<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/newsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_title"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/newsContainer"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/newsButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/news_title_1" />

        <Button
            android:id="@+id/newsButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/news_title_2" />
    </LinearLayout>

    <TextView
        android:id="@+id/articlesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/articles_title"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/articlesContainer"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/articlesButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/articles_title_1" />

        <Button
            android:id="@+id/articlesButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/articles_title_2" />
    </LinearLayout>

    <TextView
        android:id="@+id/albumsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/albums_title"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/albumsContainer"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/albumsButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/albums_title_1" />

        <Button
            android:id="@+id/albumsButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/albums_title_2" />

    </LinearLayout>

    <TextView
        android:id="@+id/otherTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_title"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/contactButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sendEmail"
            android:text="@string/contact_title" />
    </LinearLayout>
</LinearLayout>